# YOLOv8-ROS-TensorRT

./: CMakeLists.txt  README.md  build.py  export-pose.py  infer-seg.py  package.xml  requirements.txt  trt-profile.py
csrc/detect/end2end/: CMakeLists.txt
csrc/pose/normal/: CMakeLists.txt
csrc/segment/simple/: CMakeLists.txt
docker/: Dockerfile  readme.md
include/detect/: common.hpp  yolov8.hpp
include/pose/: common.hpp  yolov8-pose.hpp
include/segment/: common.hpp  yolov8-seg.hpp
inference/detect/end2end/: CMakeLists.txt
inference/pose/normal/: CMakeLists.txt
inference/segment/normal/: CMakeLists.txt
inference/segment/simple/: CMakeLists.txt
launch/: detect.launch  detect.launch.py  pose.launch  pose.launch.py  segment.launch  segment.launch.py
scripts/: export-seg.py
src/: detect.cpp  pose.cpp  segment.cpp
src/detect/end2end/: CMakeLists.txt
src/pose/normal/: CMakeLists.txt
src/segment/normal/: CMakeLists.txt
src_ros/: detect.cpp  pose.cpp  segment.cpp
weights/: .readme.md
